[gd_scene load_steps=3 format=3 uid="uid://b0qk0vn81d0kp"]

[ext_resource type="Script" uid="uid://lltsdli24v32" path="res://scripts/combatants/LayeredHealthBar.gd" id="1_smklb"]
[ext_resource type="Texture2D" uid="uid://bnukx08xo2hps" path="res://sprites/health_bar_frame.PNG" id="3_0ueoi"]

[node name="LayeredHealthBar" type="Control"]
self_modulate = Color(1, 0, 0, 1)
layout_mode = 3
anchors_preset = 0
offset_left = -80.0
offset_top = 72.0
offset_right = 80.0
offset_bottom = 88.0
script = ExtResource("1_smklb")
metadata/_edit_group_ = true

[node name="DamageLayer" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(85.799, 75.148, 0.114, 1)

[node name="DamageTimer" type="Timer" parent="DamageLayer"]
one_shot = true

[node name="HealthLayer" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.870588, 0.141176, 0, 1)

[node name="StatusLayers" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_group_ = true

[node name="HealthBarFrame" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_0ueoi")
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="HealthBarText" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 11
text = "100/100"
horizontal_alignment = 1
